<resources>
    <string name="app_name">WIVAA</string>
    <string name="category">Categories:</string>
    <string name="cat0">REVERSE ENGINEERING</string>
    <string name="cat1">HARDCODING</string>
    <string name="cat2">INSECURE DATA STORAGE</string>
    <string name="cat3">ACCESS CONTROL</string>
    <string name="cat4">SQL INJECTION</string>
    <string name="cat5">BACKUP/DEBUG</string>
    <string name="cat6">C VULNERABILITIES</string>
    <string name="hardcode">Hardcoding Issue</string>
    <string name="hardcodeDesSec">رمز ورود خود را وارد کنید:</string>
    <string name="pass">رمز ورود</string>
    <string name="access">ورود</string>
    <string name="des">توضیحات</string>
    <string name="hcDesInsec">هیچ روشی برای جلوگیری از این تهدید وجود ندارد و توسعه دهندگان تا حد ممکن باید از استفاده مستقیم stringها در کد جلوگیری کنند!</string>
    <string name="des1">توضیحات:</string>
    <string name="hcDes">در این چالش یکی از مشکلات امنیتی اندروید به نام Hardcoding را بررسی میکنیم:\nتوسعه دهندگان اندروید برخی از string ها را در داخل کد اپلیکیشن hardcode میکنند. اگر این اطلاعات مهم و حساس باشند مهاجم به راحتی با decompile کردن کد میتواند به آنها دسترسی پیدا کند و از این مشکل امنیتی سواستفاده کند.\nاطلاعاتی که ممکن است توسط توسعه دهندگان اندروید hardcode شوند و منجر به مشکلات امنیتی شوند شامل پسوردها و access token و authentication string و … است.\n\n\n\n\n</string>
    <string name="attack">حمله:</string>
    <string name="hcattackdes1">هدف  ما در این چالش پیدا کردن اطلاعات hardcode شده و کد آسیب پذیر است. در نگاه اول متوجه می شویم برای دسترسی باید رمز ورود را پیدا کنیم و فهمیدن رمز به طور منطقی امکان پذیر نیست! با وارد کردن هر رمز اشتباهی در Textbox برنامه خطا می دهد و اعلام می کند که دسترسی غیر مجاز است.</string>
    <string name="hcatttackdes2">برای پیدا کردن اطلاعات hardcode شده و فهمیدن اینکه در این کلاس چه میگذرد کد جاوا مربوط به آن را بررسی می کنیم:</string>
    <string name="hcatttackdes3">همانطور که در تصویر بالا می بینید متوجه می شویم برای داشتن دسترسی باید <b>رمز عبور ناحیه کاربری</b> را در Textbox وارد کنیم.</string>
    <string name="logging">Insecure Logging</string>
    <string name="insecureDesSec">شماره کارت خود را وارد کنید:</string>
    <string name="cart">شماره کارت</string>
    <string name="logging_access">ثبت</string>
    <string name="loggingDesInsec">برای حذف کلاس Log در زمان build باید کد زیر را در فایل Proguard اضافه کرد:</string>
    <string name="loggingDesInsec2">-assumenosideeffects class android.util.Log{*;}</string>
    <string name="loggingDes">در این چالش  می خواهیم اطلاعات حساس در log را پیدا کنیم.\nتوسعه دهندگان اندروید از log گرفتن به منظور trace کردن کد و پیدا کردن error و warningها استفاده می کنند.\nتوسعه دهندگان اندروید بعضی از اوقات اطلاعات حساسی را در logها ذخیره می کنند که منجر به دسترسی سایر برنامه ها و دزدی اطلاعات حساس می شود.\n\n\n\n\n\n\n\n\n</string>
    <string name="loggingattackdes1">در گام اول کد مربوط به این چالش را بررسی می کنیم :</string>
    <string name="loggingattackdes2">همانطور که در تصویر بالا مشخص شده است هر شماره کارتی که داخل EditText وارد شود در داخل log نیز می آید.برای شروع این حمله ابتدا یک شماره کارت در داخل EditText وارد می کنیم:</string>
    <string name="loggingattackdes3">برای دسترسی به logهای سیستم ابتدا دستگاه را با دستور زیر به adb متصل میکنیم:</string>
    <string name="adbconnect">adb connect <b>[IP-OF-GENYMOTION]</b></string>
    <string name="loggingattackdes5">سپس دستور زیر را برای دسترسی به logها در cmd وارد می کنیم:</string>
    <string name="loggingattackdes6">adb logcat</string>
    <string name="loggingattackdes7"> شماره کارتی را که در Textbox وارد کردیم را در logs مشاهده می کنیم.</string>
    <string name="sharedpref">Shared Preferences</string>
    <string name="insecdsDesSec">وارد اکانت کاربری خود شوید:</string>
    <string name="user">نام کاربری</string>
    <string name="sharedDes">ذخیره داده های مهمی همانند رمز عبور و شماره کارت اعتباری و … به یک رویکرد امن نیاز دارد.\nتوسعه دهندگان اندروید برای ذخیره داده ها از shared Preferences، DataBase ،Temporary File ،External Storage و … استفاده می کنند.\nاز آنجایی که اگر برنامه های دیگر دسترسی Root به موبایل داشته باشند به تمامی این اطلاعات دسترسی پیدا می کنند باید این اطلاعات رمزنگاری شوند.\n\n\n\n</string>
    <string name="sharedattackdes1">برای درک بهتر کد با jd-gui برنامه را مهندسی معکوس می کنیم:</string>
    <string name="sharedattackdes2">همانطور که در تصویر بالا می بینید برنامه برای ذخیره داده ها از SharedPreferences استفاده می کند.\nابتدا فیلد های نام کاربری و رمز عبور را پر می کنیم:</string>
    <string name="sharedattackdes3"> سپس دستگاه را به adb متصل میکنیم:</string>
    <string name="sharedattackdes5">برای شروع حمله ابتدا لازم است به shellبرویم که برای این منظور از دستور زیر استفاده می کنیم:</string>
    <string name="sharedattackdes7"> سپس به مسیری که فایل در آن قرار دارد می رویم:</string>
    <string name="sharedattackdes8">cd /data/data/<b>[APP-NAME]</b>/shared_prefs/<b>[XML-NAME]</b></string>
    <string name="sharedattackdes9">همانطور که در تصویر زیر مشاهده می کنید اطلاعاتی را که در EditText وارد کرده ایم در فایل ذخیره شده است.</string>
    <string name="sharedDesInsec">برای جلوگیری از این حمله باید از الگوریتم های رمزنگاری MD5 یا SHA1 بیش از 10 بار استفاده کرد .همچنین برای امنیت بیشتر از تکنیک های رمزنگاری و کلید استفاده کرد.</string>
    <string name="txt">External Storage</string>
    <string name="txtDesInsec">برای جلوگیری از این حمله باید از الگوریتم های رمزنگاری MD5 یا SHA1 بیش از 10 بار استفاده کرد .همچنین برای امنیت بیشتر از تکنیک های رمزنگاری و کلید استفاده کرد.</string>
    <string name="txtDes">ذخیره داده های مهمی همانند رمز عبور و شماره کارت اعتباری و … به یک رویکرد امن نیاز دارد.\nتوسعه دهندگان اندروید برای ذخیره داده ها از shared Preferences، DataBase ،Temporary File ،External Storage و … استفاده می کنند. از آنجایی که اگر برنامه های دیگر دسترسی Root به موبایل داشته باشند به تمامی این اطلاعات دسترسی پیدا می کنند باید این اطلاعات رمزنگاری شوند.\nدر API اندروید External Storage به عنوان SD card یا بخشی از internal storage شناخته می شود.\nنکته حائز اهمیت این است که هر برنامه ای با permission دسترسی خواندن External Storage می تواند به اطلاعات دسترسی داشته باشد و از آنها سوءاستفاده کند.</string>
    <string name="txtattackdes1">با بررسی کد مربوط به این بخش ( در تصویر زیر آمده است!) متوجه می شویم که همه ی اطلاعات در داخل فایل uinfo.txt. ذخیره می شود .</string>
    <string name="txtattackdes2">ابتدا فیلد های نام کاربری و رمز عبور را پر می کنیم:</string>
    <string name="txtattackdes3">سپس دستگاه را به adb متصل میکنیم:</string>
    <string name="txtattackdes5">برای دسترسی به این فایل لازم است که ابتدا وارد shell شده و سپس از دستور زیر استفاده کنیم تا به داخل دایرکتوری sdcard برویم:</string>
    <string name="txtattackdes6">cd /mnt/sdcard</string>
    <string name="txtattackdes7">سپس همانند تصویر زیر یک لیست از فایل های موجود در این دایرکتوری می گیریم:</string>
    <string name="adbshell">adb shell</string>
    <string name="adblogcat">adb logcat</string>
    <string name="adb">ADB</string>
    <string name="adbdes1">در این جا می خواهیم ابتدا در مورد ADB صحبت کنیم: \n ADB یک واسط بین سیستم عامل SANTOKU و شبیه ساز Genymotion است.با کمک این واسط می توان  اموری مانند انتقال داده، تصویربرداری از صفحه و اجرای دستورات shell را از طریق رایانه در گوشی انجام دهید.\n از آنجایی که با ADB آشنا شدید تعدادی از دستورات کاربردی آن را بررسی می کنیم:\nبرای شروع کار با ADB نیاز به اتصال  SANTOKU و Genymotion است که برای این منظور لازم است دستور زیر را در cmd سیستم عامل وارد کنیم:</string>
    <string name="adbdes3">برای اینکه متوجه شویم چند سیستم از طریق adb متصل هستند از دستور زیر استفاده می کنیم:</string>
    <string name="adbdevices">adb devices</string>
    <string name="adbdes5">دستور بعدی که در زیر آمده shell را به اجرا در می آورد و امکان وارد کردن دستورات متعدد را به کاربر می دهد.</string>
    <string name="adbdes7">دستور زیر اپلیکیشن اندروید داخل سیستم عامل را در دستگاه اندرویدی نصب می کند.</string>
    <string name="adbinstall">adb install <b>[APP-NAME]</b></string>
    <string name="adbdes9">دستور زیر فایل مورد نظر را از رایانه به دستگاه اندروید منتقل می کند.</string>
    <string name="adbpush">adb push <b>[FILE-NAME] [DIRECTORY]</b></string>
    <string name="adbdes11">دستور زیر فایل مورد نظر را از دستگاه اندروید به رایانه منتقل می کند.</string>
    <string name="adbpull">Adb pull <b>[FILE-NAME]</b></string>
    <string name="adbdes13">دستور زیر گزارشی از logs داخل سیستم را نشان می دهد که به منظور کشف و بررسی خطاهای موجود در اجرا کاربرد دارد.</string>
    <string name="decompileandunzip"><![CDATA[Decompile & Unzip]]></string>
    <string name="decompileandunzipdes1">در این قسمت می خواهیم در مورد unzip کردن اپلیکیشن صحبت کنیم:\n هر APK یک فایل فشرده از فایل های مختلف اپلیکیشن هست که با unzip کردن آن می توانیم فایل های مختلف مورد نظر خود را بازگردانیم اما باید توجه کنیم که مفهوم unzip کردن را با decompile کردن یکسان نگیریم.\nحال اگر به لیست فایل های unzip  شده دقت کنیم متوجه میشویم شامل یک فایل AndroidManifest.xml است که مجوزهای موردنیاز برنامه را دارد.یک فایل دیگربه نام classes.dex وجود دارد که با کمک آن می توان عملکرد برنامه را تحلیل کرد.\nهم چنین به یکسری فولدر res، lib و … نیز در کنار این فایل ها قرار دارد.\nبه طورکلی با وارد کردن دستور زیر در terminal می توان APK موردنظر را unzip کرد:</string>
    <string name="unzipdird">Unzip -d <b>[DIRECTORY-NAME] [APK-NAME]</b></string>
    <string name="decompileandunzipdes3">با وارد کردن دستور بالا یک دایرکتوری به نام dir name ایجاد می شود که شامل unzip شده APK موردنظر است. اما باید توجه کنیم که تمام فایل های موجود در این فولدر ناخوانا است و برای خوانا بودن این کدها لازم است که APK موردنظرمان را decompile کنیم.\nبرای decompile کردن در این قسمت ۲ روش بیان میشود :</string>
    <string name="decompileandunzipdes4">1.apktool:</string>
    <string name="decompileandunzipdes5">اولین متدی که بررسی می کنیم apktool است که به صورت پیش فرض در سیستم عامل santoku وجود دارد و می توان برای decompile کردن APK استفاده کرد.\nبرای این منظور ابتدا باید به محل قرارگیری APK در سیستم عامل رفت و دستور زیر را در ترمینال وارد کرد:</string>
    <string name="apktoold">Apktool d <b>[APK-NAME]</b></string>
    <string name="decompileandunzipdes7">اگر به لاگ هایی که در طول اجرای دستور میاید دقت کنیم متوجه decode کردن کد ها نی شویم.بعد از مدتی می توان فایل های decompile شده را مشاهده کرد.همانطور که قبلا در لیست فایل ها ذکر شد یکی از فایل ها AndroidManifest است که شامل permissions برنامه است که با باز کردن این فایل مجوزهای مختلف را میبینیم مثل خواندن از حافظه و ….\nاما باید به این نکته دقت کنیم که زبان کدهای موجود java نیستند و smali code هستند.</string>
    <string name="decompileandunzipdes8">2.jadx</string>
    <string name="decompileandunzipdes9">دومین متد ذکر شده jadx است که می توان از طریق سایت زیر آن را دانلود کرد:</string>
    <string name="decompileandunzipdes10">https://github.com/skylot/jadx/releases</string>
    <string name="decompileandunzipdes11">برای نصب آن می توان در ترمینال ازدستور زیر کمک گرفت :</string>
    <string name="wgetlink">wget <b>[LINK]</b></string>
    <string name="decompileandunzipdes13">در گام بعد لازم است که فایل دانلود شده را unzip کرد که برای این منظور از دستور زیر کمک می گیریم:</string>
    <string name="unzupjadx">Unzip -d jadx <b>[ZIP-NAME]</b></string>
    <string name="decompileandunzipdes15">فولدر jadx شامل یک directory به نام bin است که شامل فایل های مختلف اجرایی jadx است.برای استفاده از jadx لازم است که apk موردنظرمان را در فولدر Bin کپی کرده و از دستور زیر در ترمینال استفاده می کنیم:</string>
    <string name="jadxdird">./jadx -d <b>[DIR-NAME] [APK-NAME]</b></string>
    <string name="decompileandunzipdes17">بعد از اجرای این دستور مشاهده می کنیم که شروع به decompile کردن می کند و ممکن است با یک سری خطا روبرو شود که آنها را نادیده می گیریم.همانند روش قبلی به تمامی فایل ها دسترسی داریم و می توانیم محتویات آنها را به زبان java مشاهده کنیم.</string>
</resources>