<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".DecompileandUnzipActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/decompileandunzip"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:textStyle="bold" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="90dp"
        android:background="@drawable/linear_white"
        android:fillViewport="true"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingTop="0dp"
        android:paddingRight="30dp"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/decompileandunzip_img"
                android:layout_width="wrap_content"
                android:layout_height="236dp"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="150dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="150dp"
                app:srcCompat="@mipmap/decompileandunzipimg"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/decompileandunziptitle"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/des1"
                android:fontFamily="@font/iransansbold"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/decompileandunziptv1"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="0dp"
                android:text="@string/decompileandunzipdes1"
                android:fontFamily="@font/iransansregular"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:textDirection="rtl"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/decompileandunziptv2"
                android:paddingStart = "10dp"
                android:paddingEnd   = "10dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/unzipdird"
                android:background="@drawable/border_red"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textColor="@color/colorAccent"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/decompileandunziptv3"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="0dp"
                android:text="@string/decompileandunzipdes3"
                android:fontFamily="@font/iransansregular"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:textDirection="rtl"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/decompileandunziptv4"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="0dp"
                android:text="@string/decompileandunzipdes4"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:textDirection="ltr"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/decompileandunziptv5"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="0dp"
                android:text="@string/decompileandunzipdes5"
                android:fontFamily="@font/iransansregular"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:textDirection="rtl"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/decompileandunziptv6"
                android:paddingStart = "10dp"
                android:paddingEnd   = "10dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/apktoold"
                android:background="@drawable/border_red"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textColor="@color/colorAccent"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/decompileandunziptv7"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="0dp"
                android:text="@string/decompileandunzipdes7"
                android:fontFamily="@font/iransansregular"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:textDirection="rtl"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/decompileandunziptv8"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="0dp"
                android:textStyle="bold"
                android:text="@string/decompileandunzipdes8"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:textDirection="ltr"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/decompileandunziptv9"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="0dp"
                android:text="@string/decompileandunzipdes9"
                android:fontFamily="@font/iransansregular"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:textDirection="rtl"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/decompileandunziptv10"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="0dp"
                android:textStyle="bold"
                android:text="@string/decompileandunzipdes10"
                android:textColor="@color/colorAccent"
                android:textSize="15sp"
                android:textDirection="ltr"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/decompileandunziptv11"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="0dp"
                android:text="@string/decompileandunzipdes11"
                android:fontFamily="@font/iransansregular"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:textDirection="rtl"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/decompileandunziptv12"
                android:paddingStart = "10dp"
                android:paddingEnd   = "10dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/wgetlink"
                android:background="@drawable/border_red"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textColor="@color/colorAccent"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/decompileandunziptv13"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="0dp"
                android:text="@string/decompileandunzipdes13"
                android:fontFamily="@font/iransansregular"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:textDirection="rtl"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/decompileandunziptv14"
                android:paddingStart = "10dp"
                android:paddingEnd   = "10dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/unzupjadx"
                android:background="@drawable/border_red"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textColor="@color/colorAccent"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/decompileandunziptv15"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="0dp"
                android:text="@string/decompileandunzipdes15"
                android:fontFamily="@font/iransansregular"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:textDirection="rtl"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/decompileandunziptv16"
                android:paddingStart = "10dp"
                android:paddingEnd   = "10dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/jadxdird"
                android:background="@drawable/border_red"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textColor="@color/colorAccent"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/decompileandunziptv17"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="0dp"
                android:text="@string/decompileandunzipdes17"
                android:fontFamily="@font/iransansregular"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:textDirection="rtl"/>
            </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</RelativeLayout>