<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".AdbActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/adb"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:textStyle="bold" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="90dp"
        android:background="@drawable/linear_white"
        android:fillViewport="true"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingTop="0dp"
        android:paddingRight="30dp"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/adb_img"
                android:layout_width="wrap_content"
                android:layout_height="236dp"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="150dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="150dp"
                app:srcCompat="@mipmap/adbimg"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/adbtitle"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/des1"
                android:fontFamily="@font/iransansbold"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/adbtv1"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="0dp"
                android:text="@string/adbdes1"
                android:fontFamily="@font/iransansregular"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:textDirection="rtl"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/adbtv2"
                android:paddingStart = "10dp"
                android:paddingEnd   = "10dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/adbconnect"
                android:background="@drawable/border_red"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textColor="@color/colorAccent"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/adbtv3"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="0dp"
                android:text="@string/adbdes3"
                android:fontFamily="@font/iransansregular"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:textDirection="rtl"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/adbtv4"
                android:paddingStart = "10dp"
                android:paddingEnd   = "10dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/adbdevices"
                android:background="@drawable/border_red"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textColor="@color/colorAccent"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/adbtv5"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="0dp"
                android:text="@string/adbdes5"
                android:fontFamily="@font/iransansregular"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:textDirection="rtl"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/adbtv6"
                android:paddingStart = "10dp"
                android:paddingEnd   = "10dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/adbshell"
                android:background="@drawable/border_red"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textColor="@color/colorAccent"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/adbtv7"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="0dp"
                android:text="@string/adbdes7"
                android:fontFamily="@font/iransansregular"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:textDirection="rtl"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/adbtv8"
                android:paddingStart = "10dp"
                android:paddingEnd   = "10dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/adbinstall"
                android:background="@drawable/border_red"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textColor="@color/colorAccent"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/adbtv9"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="0dp"
                android:text="@string/adbdes9"
                android:fontFamily="@font/iransansregular"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:textDirection="rtl"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/adbtv10"
                android:paddingStart = "10dp"
                android:paddingEnd   = "10dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/adbpush"
                android:background="@drawable/border_red"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textColor="@color/colorAccent"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/adbtv11"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="0dp"
                android:text="@string/adbdes11"
                android:fontFamily="@font/iransansregular"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:textDirection="rtl"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/adbtv12"
                android:paddingStart = "10dp"
                android:paddingEnd   = "10dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/adbpull"
                android:background="@drawable/border_red"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textColor="@color/colorAccent"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/adbtv13"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="0dp"
                android:text="@string/adbdes13"
                android:fontFamily="@font/iransansregular"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:textDirection="rtl"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/adbtv14"
                android:paddingStart = "10dp"
                android:paddingEnd   = "10dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/adblogcat"
                android:background="@drawable/border_red"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textColor="@color/colorAccent"
                />
            </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</RelativeLayout>